--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ font-family: 'Prata', serif; */
 
 /* Variables */
 :root{
+    scroll-behavior: smooth;
     --poppins: 'Poppins', sans-serif;
     --prata: 'Prata', serif;
     --open: 'Open Sans', sans-serif;
@@ -24,6 +25,86 @@ font-family: 'Prata', serif; */
     margin: 0;
 }
 
+/* ============================================= navbar */
+.hamburger{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background: #ffffff;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0,0,0, 0.5);
+    z-index: 10;
+}
+.menu-navegacion{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 40vw;
+    height: 100%;
+    background-image: linear-gradient(135deg, #FFBA60 0%, #764ba2 100%);
+    /* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: transform .3s ease-in-out;
+    transform: translate(110%);
+    box-shadow: 0 0 6px rgba(0,0,0, 0.5);
+    z-index: 100;
+}
+.icon_instagram{
+    font-size: 2em;
+}
+.menu-navegacion a{
+    color: #fff;
+}
+
+.spread{
+    transform: translate(0);
+}
+.header_navbar{
+    background: #f7f5eb;
+}
+.logo{
+    width: 50px;
+    height: 50px;
+}
+.navbar_container{
+    width: 100%;
+    height: 3.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar_content{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    margin: 0;
+}
+.navbar_item{
+    cursor: pointer;
+    margin: 0 1rem;
+}
+.navbar_link{
+    text-decoration: none;
+    font-family: var(--poppins);
+    color: #26333a;
+    transition: .1s;
+}
+.navbar_link:hover{
+    text-decoration: none;
+    color: #1d2529;
+    border-bottom: 2px solid #FFBA60;
+}
+.mr-0{
+    margin-right: 0;
+}
 /* ============================================= MAIN BANNER */
 .main_banner{
     display: flex;
@@ -327,9 +408,47 @@ font-family: 'Prata', serif; */
     color: #fff;
     font-family: var(--open);
     font-size: 1em;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+.footer_link{
+    
+    color: #fff;
+    font-family: var(--open);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 1em;
+    text-align: right;
+    cursor: pointer;
+}
+.footer_link:hover{
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
 }
 
 /* ===========================================================  MEDIA QUERIES */
+
+@media only screen and (max-width: 768px){
+    .navbar_mobile{
+        display: block;
+    }
+    .header_navbar{
+        display: none;
+    }
+    .main_banner-parrafo-icon{
+        margin: 0 .5rem;
+    }
+}
+@media only screen and (min-width: 768px){
+    .navbar_mobile{
+        display: none;
+    }
+    .header_navbar{
+        display: block;
+    }
+}
 
 @media screen and (max-width: 600px){
     .lascano_row{
@@ -353,5 +472,10 @@ font-family: 'Prata', serif; */
     .map_content{
         margin: 2rem 0;
         padding-bottom: 0;
+    }
+}
+@media screen and (max-width: 500px){
+    .menu-navegacion{
+        width: 60vw;
     }
 }
