--- a/main.css
+++ b/main.css
@@ -86,22 +86,78 @@ font-family: 'Prata', serif; */
     list-style: none;
     align-items: center;
     margin: 0;
+    transform: translate(0%, 0%);
 }
 .navbar_item{
-    cursor: pointer;
-    margin: 0 1rem;
+    list-style: none;
 }
 .navbar_link{
-    text-decoration: none;
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    text-align: center;
     font-family: var(--poppins);
-    color: #26333a;
-    transition: .1s;
+    font-size: 1em;
+    color: #1d2529;
+    text-transform: uppercase;
+    transition: .5s;
+    text-decoration: none;
 }
 .navbar_link:hover{
     text-decoration: none;
     color: #1d2529;
-    border-bottom: 2px solid #FFBA60;
 }
+.navbar_link:before{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #FFBA60;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .5s;
+}
+.navbar_link:hover:before{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+.navbar_link:after{
+    content:"";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 2px;
+    background: #FFBA60;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform .5s;
+}
+.navbar_link:hover:after{
+    transform: scaleX(1);
+    transform-origin: right;
+
+}
+/* .navbar_item{
+    cursor: pointer;
+    margin: 0 1rem;
+}
+.navbar_link{
+    position: relative;
+    text-decoration: none;
+    font-family: var(--poppins);
+    color: #26333a;
+    transition: .1s all ease;
+}
+.navbar_link:hover{
+    text-decoration: none;
+    color: #1d2529;
+    border-top: 2px solid #FFBA60;
+} */
 .mr-0{
     margin-right: 0;
 }
@@ -134,6 +190,9 @@ font-family: 'Prata', serif; */
     font-family: var(--prata);
     font-size: 4em;
     margin: 0;
+}
+.main_banner-title-span{
+    color: #FFBA60;
 }
 .main_banner-description{
     font-family: var(--prata);
@@ -194,9 +253,10 @@ font-family: 'Prata', serif; */
     background: var(--colum);
 }
 .main_content_icon{
-    width: 2rem;
+    width: 1.5rem;
     height: 10rem;
     background: var(--columnsecon);
+    margin-top: -2em;
 }
 .frase_content-text{
     margin-left: 1rem;
