--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ font-family: 'Prata', serif; */
 }
 .icon_instagram{
     font-size: 2em;
+    color: #fff;
 }
 .menu-navegacion a{
     color: #fff;
@@ -150,22 +151,6 @@ font-family: 'Prata', serif; */
     transform-origin: right;
 
 }
-/* .navbar_item{
-    cursor: pointer;
-    margin: 0 1rem;
-}
-.navbar_link{
-    position: relative;
-    text-decoration: none;
-    font-family: var(--poppins);
-    color: #26333a;
-    transition: .1s all ease;
-}
-.navbar_link:hover{
-    text-decoration: none;
-    color: #1d2529;
-    border-top: 2px solid #FFBA60;
-} */
 .mr-0{
     margin-right: 0;
 }
@@ -418,7 +403,9 @@ font-family: 'Prata', serif; */
     border-radius: 50%;
     padding: 1rem;
 }
-
+.services_previsional{
+    padding: 0 0 0 1rem;
+}
 /* ====================================  CALL TO ACTION */
 
 .call_title{
@@ -459,7 +446,7 @@ font-family: 'Prata', serif; */
 }
 .mapWrapper{
     position: relative;
-    padding-bottom: 66.6666667%;
+    padding-bottom: 25%;
     height: 0;
 }
 .mapWrapper iframe{
@@ -477,32 +464,95 @@ font-family: 'Prata', serif; */
     width: 100%;
     height: auto;
 }
+.footer .icon_instagram{
+    margin-top: 1rem;
+    font-size: 3em;
+}
 .footer_content{
     width: 100%;
    padding: 1rem;
 }
+.footer_data-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
 .footer_data{
     color: #fff;
     font-family: var(--open);
-    font-size: 1em;
+    font-size: 1.2em;
     margin: 0;
     display: flex;
     flex-direction: column;
+    margin: auto 0;
+    text-align: center;
+}
+.footer_item{  
+    color: #fff;
+    font-family: var(--open);
+    font-size: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    padding: 0 4rem;
+    /* margin: auto 0; */
 }
 .footer_link{
-    
     color: #fff;
     font-family: var(--open);
     font-weight: 500;
     text-transform: uppercase;
     font-size: 1em;
-    text-align: right;
+    text-align: center;
     cursor: pointer;
+    border-bottom: 1px solid #fff;
+    padding: .5em;
 }
 .footer_link:hover{
     text-decoration: none;
-    color: #fff;
+    color: #FFBA60;
     cursor: pointer;
+    background: #f7f7f7;
+}
+.bb-0{
+    border-bottom: none;
+    margin-bottom: 0;
+}
+
+/* =============================================== Blue producciones */
+.blue_prod{
+    margin: 0;
+    width: 100%;
+    height: 4rem;
+    background: #f7f7f7;
+}
+.blue_prod-content{
+    height: 100%;
+}
+.blue_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.blue_content{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+.blue_item{
+    margin: 0 .5rem;
+}
+.blue_link{
+    color: #FFBA60;
+}
+.blue_link:hover{
+    color: #FFBA60;
+    text-decoration: none;
 }
 
 /* ===========================================================  MEDIA QUERIES */
@@ -516,6 +566,10 @@ font-family: 'Prata', serif; */
     }
     .main_banner-parrafo-icon{
         margin: 0 .5rem;
+    }
+    .footer_data{
+        margin-bottom: 3rem;
+        font-size: 1em;
     }
 }
 @media only screen and (min-width: 768px){
@@ -550,9 +604,16 @@ font-family: 'Prata', serif; */
         margin: 2rem 0;
         padding-bottom: 0;
     }
+    .mapWrapper{
+        padding-bottom: 75%;
+        margin-bottom: 1.5rem;
+    }
 }
 @media screen and (max-width: 500px){
     .menu-navegacion{
         width: 60vw;
+    }
+    .footer_item{
+        padding: 0;
     }
 }
