--- a/main.css
+++ b/main.css
@@ -25,6 +25,27 @@ font-family: 'Prata', serif; */
     margin: 0;
 }
 
+/* ============================================ WHATSAPP */
+
+.whatsapp {
+    display: none;
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom: 13px;
+    right: 12px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    z-index:100;
+  }
+  
+  .whatsapp-icon {
+    margin-top: 16px;
+  }
+
 /* ============================================= navbar */
 .hamburger{
     position: fixed;
@@ -309,6 +330,8 @@ font-family: 'Prata', serif; */
     width: 400px;
     height: 400px;
     border: 10px solid #ffffff;
+    position: relative;
+    margin-bottom: 4rem;
 }
 .lascano_image{
     width: 100%;
@@ -406,6 +429,8 @@ font-family: 'Prata', serif; */
 .services_previsional{
     padding: 0 0 0 1rem;
 }
+
+
 /* ====================================  CALL TO ACTION */
 
 .call_title{
@@ -481,7 +506,7 @@ font-family: 'Prata', serif; */
 .footer_data{
     color: #fff;
     font-family: var(--open);
-    font-size: 1.2em;
+    font-size: 1em;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -496,7 +521,7 @@ font-family: 'Prata', serif; */
     flex-direction: column;
     justify-content: center; 
     padding: 0 4rem;
-    /* margin: auto 0; */
+ 
 }
 .footer_link{
     color: #fff;
@@ -514,6 +539,11 @@ font-family: 'Prata', serif; */
     color: #FFBA60;
     cursor: pointer;
     background: #f7f7f7;
+}
+.celular{
+    color: #fff;
+    font-family: var(--open);
+    font-size: 1em;
 }
 .bb-0{
     border-bottom: none;
@@ -541,8 +571,9 @@ font-family: 'Prata', serif; */
 .blue_content{
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .blue_item{
     margin: 0 .5rem;
@@ -582,6 +613,9 @@ font-family: 'Prata', serif; */
 }
 
 @media screen and (max-width: 600px){
+    .whatsapp {
+        display: block;
+    }
     .lascano_row{
         justify-content: center;
         display: flex;
